--- a/web_shell/index.html
+++ b/web_shell/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Console</title>
+  <title>Console</title>
   <link rel="stylesheet" type="text/css" href="css/index.css">
+  <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/lfbhahfblgmngkkgbgbccedhhnkkhknb">
+  <link rel="shortcut icon" href="assets/favicon.png">
   <script src="polyfill/idb.filesystem.js/idb.filesystem.js"></script>
   <script src="js/axiom_base.amd.concat.js"></script>
   <script src="js/wash.amd.concat.js"></script>
